# SimplePoller

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/simple_poller/: base_poller.py  sqs_poller.py
tests/: test_base_poller.py
